fixed input for edit user input box not showing properly

--- a/app/assets/stylesheets/components/_actiontext.scss
+++ b/app/assets/stylesheets/components/_actiontext.scss
@@ -47,6 +47,14 @@
   height: 300px;
 }
 
+#event_description {
+  border: 1px solid #373A47;
+  background-color: #2E303E;
+  margin-bottom: 30px;
+  width: 660px;
+  height: 300px;
+}
+
 .trix-button-row {
   width: 660px;
 }
